--- a/src/main/resources/templates/billofmaterials/update-billofmaterial.html
+++ b/src/main/resources/templates/billofmaterials/update-billofmaterial.html
@@ -95,6 +95,7 @@
                 <label for="perassemblyqty" class="col-form-label">Per Assembly qty</label>
                 <input
                   type="number"
+                  step="0.1"
                   th:field="*{perassemblyqty}"
                   class="form-control"
                   id="perassemblyqty"
