--- a/src/main/resources/templates/productreviews/add-productreview.html
+++ b/src/main/resources/templates/productreviews/add-productreview.html
@@ -52,7 +52,7 @@
                   th:field="*{emailaddress}"
                   class="form-control"
                   id="emailaddress"
-                  placeholder="i@love.u"
+                  placeholder="email@domain.com"
                 />
                 <span
                   th:if="${#fields.hasErrors('emailaddress')}"
