--- a/src/main/resources/templates/billofmaterials/add-billofmaterial.html
+++ b/src/main/resources/templates/billofmaterials/add-billofmaterial.html
@@ -95,10 +95,11 @@
                 <label for="perassemblyqty" class="col-form-label">Per Assembly qty</label>
                 <input
                   type="number"
+                  step="0.1"
                   th:field="*{perassemblyqty}"
                   class="form-control"
                   id="perassemblyqty"
-                  placeholder="0"
+                  placeholder="0.1"
                 />
                 <span
                   th:if="${#fields.hasErrors('perassemblyqty')}"
