--- a/src/main/resources/templates/products/add-product.html
+++ b/src/main/resources/templates/products/add-product.html
@@ -23,7 +23,7 @@
       <h2 class="mb-5">New Product</h2>
       <div class="row">
         <div class="col-md-6">
-          <form action="#" th:action="@{/product/add/}" th:object="${product}" method="post">
+          <form action="#" th:action="@{/products/add/}" th:object="${product}" method="post">
             <div class="row">
               <div class="form-group col-md-6">
                 <label for="productreviewid" class="col-form-label">Id</label>
@@ -71,7 +71,7 @@
                 ></span>
               </div>
               <div class="form-group col-md-6">
-                <label for="productline" class="col-form-label">Porduct Line</label>
+                <label for="productline" class="col-form-label">Product Line</label>
                 <input
                   type="text"
                   th:field="*{productline}"
@@ -116,22 +116,7 @@
                 ></span>
               </div>
               <div class="form-group col-md-6">
-                <label for="discontinueddate" class="col-form-label">Discontinued Date</label>
-                <input
-                  type="date"
-                  th:field="*{discontinueddate}"
-                  class="form-control"
-                  id="discontinueddate"
-                  placeholder="Date"
-                />
-                <span
-                  th:if="${#fields.hasErrors('discontinueddate')}"
-                  th:errors="*{discontinueddate}"
-                  class="text-danger"
-                ></span>
-              </div>
-              <div class="form-group col-md-6">
-                <label for="sellstartdate" class="col-form-label">Sell Start Date </label>
+                <label for="sellstartdate" class="col-form-label">Sell Start Date</label>
                 <input
                   type="date"
                   th:field="*{sellstartdate}"
@@ -146,7 +131,7 @@
                 ></span>
               </div>
               <div class="form-group col-md-6">
-                <label for="sellenddate" class="col-form-label">Sell End Date </label>
+                <label for="sellenddate" class="col-form-label">Sell End Date</label>
                 <input
                   type="date"
                   th:field="*{sellenddate}"
@@ -157,6 +142,21 @@
                 <span
                   th:if="${#fields.hasErrors('sellenddate')}"
                   th:errors="*{sellenddate}"
+                  class="text-danger"
+                ></span>
+              </div>
+              <div class="form-group col-md-6">
+                <label for="discontinueddate" class="col-form-label">Discontinued Date</label>
+                <input
+                  type="date"
+                  th:field="*{discontinueddate}"
+                  class="form-control"
+                  id="discontinueddate"
+                  placeholder="Date"
+                />
+                <span
+                  th:if="${#fields.hasErrors('discontinueddate')}"
+                  th:errors="*{discontinueddate}"
                   class="text-danger"
                 ></span>
               </div>
