--- a/src/main/resources/templates/queries/index.html
+++ b/src/main/resources/templates/queries/index.html
@@ -28,10 +28,10 @@
           <h2>Queries</h2>
           <h5>Select a Query</h5>
           <p>
-            <a href="/queries/"><i class="fas fa-user-edit ml-2"></i> Go to Vendors</a>
+            <a href="/queries/queryrange"><i class="fas fa-calendar ml-2"></i> Query by date range</a>
           </p>
-          <p sec:authorize="hasRole('ADMIN')">
-            <a href="/queries/"><i class="fas fa-truck ml-2"></i> Go to Shipmethods</a>
+          <p>
+            <a href="/queries/"><i class="fas fa-search"></i> Query by purchase order details</a>
           </p>
         </div>
       </div>
