--- a/src/main/resources/templates/purchaseorderdetails/index.html
+++ b/src/main/resources/templates/purchaseorderdetails/index.html
@@ -28,7 +28,8 @@
             <table class="table table-striped table-responsive-md">
               <thead>
                 <tr>
-                  <th>Id</th>
+                  <th>Header Id</th>
+                  <th>Detail Id</th>
                   <th>Due Date</th>
                   <th>Modified Date</th>
                   <th>Order Quantity</th>
@@ -42,7 +43,11 @@
               </thead>
               <tbody>
                 <tr th:each="purchaseorderdetail : ${purchaseorderdetails}">
-                  <td class="text-info" th:text="${purchaseorderdetail.id}"></td>
+                  <td class="text-info" th:text="${purchaseorderdetail.id.purchaseorderid}"></td>
+                  <td
+                    class="text-info"
+                    th:text="${purchaseorderdetail.id.purchaseorderdetailid}"
+                  ></td>
                   <td class="text-info" th:text="${purchaseorderdetail.duedate}"></td>
                   <td class="text-info" th:text="${purchaseorderdetail.modifieddate}"></td>
                   <td class="text-info" th:text="${purchaseorderdetail.orderqty}"></td>
