--- a/src/main/resources/templates/queries/index.html
+++ b/src/main/resources/templates/queries/index.html
@@ -31,7 +31,7 @@
             <a href="/queries/queryrange"><i class="fas fa-calendar ml-2"></i> Query by date range</a>
           </p>
           <p>
-            <a href="/queries/"><i class="fas fa-search"></i> Query by purchase order details</a>
+            <a href="/queries/queryTwo"><i class="fas fa-search"></i> Query by purchase order details</a>
           </p>
         </div>
       </div>
