--- a/src/main/resources/templates/queries/results.html
+++ b/src/main/resources/templates/queries/results.html
@@ -45,7 +45,7 @@
           </div>
         </div>
       </div>
-      <a href="/"><i class="fas fa-home ml-2"></i> Go back to main</a>
+      <a href="/queries/query=range"><i class="fas fa-home ml-2"></i> Go back</a>
     </div>
   </body>
 </html>
