--- a/src/main/resources/templates/products/update-product.html
+++ b/src/main/resources/templates/products/update-product.html
@@ -31,10 +31,10 @@
           >
             <div class="row">
               <div class="form-group col-md-6">
-                <label for="productreviewid" class="col-form-label">Id</label>
+                <label for="productid" class="col-form-label">Id</label>
                 <input
                   type="number"
-                  th:field="${productid}"
+                  th:field="*{productid}"
                   class="form-control"
                   id="productid"
                   placeholder="0"
@@ -76,7 +76,7 @@
                 ></span>
               </div>
               <div class="form-group col-md-6">
-                <label for="productline" class="col-form-label">Porduct Line</label>
+                <label for="productline" class="col-form-label">Product Line</label>
                 <input
                   type="text"
                   th:field="*{productline}"
@@ -93,7 +93,7 @@
               <div class="form-group col-md-6">
                 <label for="size" class="col-form-label">Size</label>
                 <input
-                  type="size"
+                  type="text"
                   th:field="*{size}"
                   class="form-control"
                   id="size"
@@ -168,12 +168,7 @@
             </div>
             <div class="row">
               <div class="col-md-4 mt-3">
-                <input
-                  type="submit"
-                  name="action"
-                  class="btn btn-primary"
-                  value="Update Purchase Order Header"
-                />
+                <input type="submit" name="action" class="btn btn-primary" value="Update" />
               </div>
               <div class="col-md-3 mt-3">
                 <input type="reset" class="btn btn-secondary" value="Clear" />
