--- a/src/main/resources/templates/queries/byrestriction.html
+++ b/src/main/resources/templates/queries/byrestriction.html
@@ -31,6 +31,7 @@
                   <th>Employee Id</th>
                   <th>Sub total</th>
                   <th>Order Date</th>
+                  <th>Details</th>
                 </tr>
               </thead>
               <tbody>
@@ -39,13 +40,14 @@
                   <td class="text-info" th:text="${result.employeeid}"></td>
                   <td class="text-info" th:text="${result.subtotal}"></td>
                   <td class="text-info" th:text="${result.orderdate}"></td>
+                  <td class="text-info" th:text="${result.purchaseorderdetails.size}"></td>
                 </tr>
               </tbody>
             </table>
           </div>
         </div>
       </div>
-      <a href="/"><i class="fas fa-home ml-2"></i> Go back to main</a>
+      <a href="/queries"><i class="fas fa-home ml-2"></i> Go back to Queries </a>
     </div>
   </body>
 </html>
