--- a/src/main/resources/templates/queries/index.html
+++ b/src/main/resources/templates/queries/index.html
@@ -22,17 +22,22 @@
     />
   </head>
   <body>
-    <div  class="container my-5">
+    <div class="container my-5">
       <div class="row">
         <div class="col-md-6">
           <h2>Queries</h2>
           <h5>Select a Query</h5>
           <p>
-            <a href="/queries/queryrange"><i class="fas fa-calendar ml-2"></i> Query by date range</a>
+            <a href="/queries/query=range"
+              ><i class="fas fa-calendar ml-2"></i> Query by date range</a
+            >
           </p>
           <p>
-            <a href="/queries/queryTwo"><i class="fas fa-search"></i> Query by purchase order details</a>
+            <a href="/queries/query=two"
+              ><i class="fas fa-search"></i> Query by purchase order details</a
+            >
           </p>
+          <a href="/"><i class="fas fa-home ml-2"></i> Go back to main</a>
         </div>
       </div>
     </div>
